--- a/about.html
+++ b/about.html
@@ -11,12 +11,11 @@
 <header>
     <nav>
         <ul>
-            <li><a href="index.html"><img src="favicon-32x32.png" /></a></li>
-            <li><a href="informations.html">S'informer</li>
+            <li><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRBlY1Qe0fY-d23-rZo0sV1o20egbYWcn3jjw&usqp=CAU" width="60px"></li>
+            <li><a href="index.html">S'informer></a></li>
             <li><a href="adoption.html">Adopter</li>
             <li><a href="blog.html">Blog</li>
             <li><a href="about.html">À propos </li>
-            <li><a href="contact.html">Contact</li>
         </ul>
     </nav>
     <h1>Bienvenue sur Le Monde des chats</h1>
